@@ -10,6 +10,7 @@ Imortant changes:
 - Default image size now 100 instead of 40 (can be restored with "set images_size 40")
 Features:
 - new "websearch" command which default to wiby.me
+- new "share" command to send a page by email
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
